Fix mobile overflow

--- a/styles/Keyboard.module.css
+++ b/styles/Keyboard.module.css
@@ -16,7 +16,7 @@
 
 .keyboardRow {
   display: flex;
-  justify-content: center;
+  margin: 0 auto;
 }
 
 .keyboardKey {
